Fix Đóng Lỗi của Manage,Delivery,SaleStaff

--- a/ProjectDiamondShop/Views/Home/Contact.cshtml
+++ b/ProjectDiamondShop/Views/Home/Contact.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    Layout = null;
+﻿@{
+    Layout = "~/Views/Shared/_LayoutPage1.cshtml";
 }
 
 <!DOCTYPE html>
@@ -15,151 +14,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Contact</title>
-    <style>
-        .container {
-            width: 100%;
-            max-width: 960px;
-            margin: 0 auto;
-        }
-
-        .row {
-            display: flex;
-            flex-wrap: wrap;
-            margin-left: 10px;
-            margin-right: 10px;
-        }
-
-            .row.decription {
-                margin-top: 10px;
-            }
-
-        .col-md-4 {
-            flex: 0 0 33.333333%;
-            max-width: 33.333333%;
-            padding: 0 15px;
-            box-sizing: border-box;
-        }
-
-        h3 {
-            margin-top: 0;
-            color: black;
-            font-size: 18px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 5px;
-        }
-
-        .dropdown-menu {
-            max-width: 10px;
-        }
-
-            .dropdown-menu li a {
-                font-size: 12px;
-            }
-
-            .dropdown-menu h3 {
-                font-size: 14px;
-                margin-bottom: 2px;
-            }
-
-            .dropdown-menu .col-md-3 {
-                border-right: 1px solid #ddd;
-                padding-right: 10px;
-            }
-
-                .dropdown-menu .col-md-3:last-child {
-                    border-right: none;
-                }
-
-            .dropdown-menu .divider {
-                margin-top: 2px;
-                margin-bottom: 2px;
-            }
-
-        .navbar-brand {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-            .navbar-brand span:first-child {
-                margin-right: 10px;
-            }
-
-        .navbar-nav > li > .dropdown-menu {
-            display: none;
-        }
-
-        .navbar-nav > li:hover > .dropdown-menu {
-            display: block;
-        }
-    </style>
 
 </head>
 <body>
     <form id="form1" runat="server">
         <div>
-            <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-                <div class="container ">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
 
-                        </button>
-
-                        <a class="navbar-brand text-center" href="@Url.Action("Index", "Home")">
-                            <span>
-                                <img src="~/Image/HomePage/Logo/SafeIcon.jpg" alt="TheDiamondShop" height="40" />
-                            </span>
-                            <span>The Diamond Shop</span>
-                        </a>
-                    </div>
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="@Url.Action("Index", "Home")">Home</a></li>
-                            <li><a href="@Url.Action("About", "Home")">About</a></li>
-                            <li><a href="@Url.Action("Contact", "Home")">Contact US</a></li>
-                            <li><a href="@Url.Action("Index", "Diamonds")">Shop</a></li>
-                            @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
-                            {
-
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        <span class="glyphicon glyphicon-shopping-cart"></span>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="@Url.Action("Index", "Cart")">View Cart</a></li>
-                                        <li><a href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        <span class="glyphicon glyphicon-user"></span>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                        <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
-                                    </ul>
-                                </li>
-                            }
-                            else
-                            {
-                                <li><a href="@Url.Action("Index", "SignUp")">Sign Up</a></li>
-                                <li><a href="@Url.Action("Index", "Login")">Login</a></li>
-                            }
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </form>
 </body>
