--- a/ProjectDiamondShop/Views/ViewProfile/EditProfile.cshtml
+++ b/ProjectDiamondShop/Views/ViewProfile/EditProfile.cshtml
@@ -149,7 +149,6 @@
             display: block;
         }
     </style>
-    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -188,7 +187,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li><a href="@Url.Action("Index", "Cart")">View Cart</a></li>
-                                            <li><a href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
+                                            <li><a href="@Url.Action("ViewOrders", "Order")">View Orders</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
