--- a/ProjectDiamondShop/Views/Cart/Index.cshtml
+++ b/ProjectDiamondShop/Views/Cart/Index.cshtml
@@ -14,6 +14,16 @@
         text-align: center; /* Center align text in table headers and cells */
         vertical-align: middle; /* Vertically center align text */
     }
+
+    .button-group {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+    }
+
+        .button-group form {
+            margin: 0 10px;
+        }
 </style>
 
 <h2>Your Cart</h2>
@@ -39,24 +49,22 @@
                             @Html.Hidden("diamondID", item.DiamondID)
                             <input type="submit" value="Remove" class="btn btn-danger" />
                         }
-                        @using (Html.BeginForm("CreateOrder", "Order", FormMethod.Post))
-                        {
-                            <input type="submit" value="Create Order" class="btn btn-primary" />
-                        }
                     </td>
                 </tr>
             }
         </tbody>
     </table>
 
-    <div id="clearCartButtonContainer">
+    <div class="button-group">
         @using (Html.BeginForm("ClearCart", "Cart", FormMethod.Post))
         {
             <input type="submit" value="Clear Cart" class="btn btn-warning" />
         }
+        @using (Html.BeginForm("CreateOrder", "Order", FormMethod.Post))
+        {
+            <input type="submit" value="Check Out" class="btn btn-primary" />
+        }
     </div>
-
-
 </div>
 
 <div class="modal fade" id="emptyCartModal" tabindex="-1" role="dialog" aria-labelledby="emptyCartModalLabel" aria-hidden="true">
