--- a/ProjectDiamondShop/Views/Home/HomePage.cshtml
+++ b/ProjectDiamondShop/Views/Home/HomePage.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_LayoutPage1.cshtml";
+}
 <!DOCTYPE html>
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head runat="server">
@@ -13,96 +14,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-        .container {
-            width: 100%;
-            max-width: 960px;
-            margin: 0 auto;
-        }
-
-        .row {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .col-lg-4 {
-            margin-bottom: 10px;
-        }
-
-        .col-md-4 {
-            flex: 0 0 33.333333%;
-            max-width: 33.333333%;
-            padding: 0 15px;
-            box-sizing: border-box;
-        }
-
-        h3 {
-            margin-top: 0;
-            color: slateblue;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 5px;
-        }
-
-        .dropdown-menu {
-            max-width: 10px;
-        }
-
-            .dropdown-menu li a {
-                font-size: 12px;
-            }
-
-            .dropdown-menu h3 {
-                font-size: 14px;
-                margin-bottom: 2px;
-            }
-
-            .dropdown-menu .col-md-3 {
-                border-right: 1px solid #ddd;
-                padding-right: 10px;
-            }
-
-                .dropdown-menu .col-md-3:last-child {
-                    border-right: none;
-                }
-
-            .dropdown-menu .divider {
-                margin-top: 2px;
-                margin-bottom: 2px;
-            }
-
-        .navbar-brand {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-            .navbar-brand span:first-child {
-                margin-right: 10px;
-            }
-
-        .slide-content {
-            position: relative;
-            text-align: center;
-        }
-
-            .slide-content p {
-                position: absolute;
-                top: 75%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-            }
-
-        .col-md-3 {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
 
         /* Custom CSS for Diamond Search icons */
         .diamond-search-icons {
@@ -146,110 +57,15 @@
             .search-button:hover {
                 background-color: #0056b3;
             }
-
-        .container.w-100 d-block text-center mb- {
-            font-size: 12px;
-        }
-
-        .slide-wrapper {
-            position: relative;
-        }
-
-        .carousel-control {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            opacity: 0;
-        }
-
-            .carousel-control .glyphicon {
-                color: crimson;
-            }
-
-        .left.carousel-control {
-            left: 10px;
-        }
-
-        .right.carousel-control {
-            right: 10px;
-        }
-
-        .decription {
-            text-align: justify;
-        }
-
-        .navbar-nav > li > .dropdown-menu {
-            display: none;
-        }
-
-        .navbar-nav > li:hover > .dropdown-menu {
-            display: block;
-        }
-    </style>
     </style>
 </head>
 
 <body>
     <form id="form1" runat="server">
         <div>
-            <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-                <div class="container ">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-
-                        </button>
-
-                        <a class="navbar-brand text-center" href="@Url.Action("Index", "Home")">
-                            <span>
-                                <img src="/Image/HomePage/Logo/SafeIcon.jpg" alt="TheDiamondShop" height="40" />
-                            </span>
-                            <span>The Diamond Shop</span>
-                        </a>
-                    </div>
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="@Url.Action("Index", "Home")">Home</a></li>
-                            <li><a href="@Url.Action("About", "Home")">About</a></li>
-                            <li><a href="@Url.Action("Contact", "Home")">Contact US</a></li>
-                            <li><a href="@Url.Action("Index", "Diamonds")">Shop</a></li>
-                            @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
-                            {
-
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        <span class="glyphicon glyphicon-shopping-cart"></span>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="@Url.Action("Index", "Cart")">View Cart</a></li>
-                                        <li><a href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        <span class="glyphicon glyphicon-user"></span>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                        <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
-                                    </ul>
-                                </li>
-                            }
-                            else
-                            {
-                                <li><a href="@Url.Action("Index", "SignUp")">Sign Up</a></li>
-                                <li><a href="@Url.Action("Index", "Login")">Login</a></li>
-                            }
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <!---image slider--->
             <div class="container center">
-                <h2>Carousel Example</h2>
+                <h2></h2>
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -387,19 +203,6 @@
 
 
         <!---Middle Contents End---->
-        <!---Footer Contents Start here---->
-        <hr />
-        <footer>
-            <div class="container text-center">
-                <p><a href="#">Back To Top</a></p>
-                <p>&copy; 2024 The Diamond Shop. All rights reserved.</p>
-                <p>
-                    <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a> | <a href="#">Refund Policy</a>
-                </p>
-            </div>
-        </footer>
-
-        <!---Footer Contents End---->
 
     </form>
     <div class="modal fade" id="loginSuccessModal" tabindex="-1" role="dialog" aria-labelledby="loginSuccessModalLabel" aria-hidden="true">
